Correct 'Dont' to 'Don't' spelling. Eliminate unnecessary scrollbar on main page.

--- a/c4n_weather/src/main/resources/static/styles/main.css
+++ b/c4n_weather/src/main/resources/static/styles/main.css
@@ -205,132 +205,6 @@
   transition: 2s ease-out;
   z-index: 10;
 }
-/* Sidebar End */
-
-/* Sidebar Start */
-/* .sidebar-w {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  top: 55px;
-  left: 0;
-  width: 300px;
-  transform: translate(-50%, -50%) scale(0);
-  transition: 350ms ease-in-out;
-  border: 1px solid white;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  color: #eee;
-  z-index: 100;
-}
-
-.sidebar-w.active {
-  transform: translate(0) scale(1);
-}
-
-.sidebar-titleW {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  border-bottom: 1px solid;
-  padding: 5px;
-}
-
-.sidebarBtn {
-  font-size: 1rem;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.sidebar-clearBtn:hover + .sidebar-tooltip{
-  opacity: 1;
-}
-
-.sidebar-tooltip {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-  top: -30px;
-  height: 25px;
-  width: auto;
-  font-size: .7rem;
-  background-color: grey;
-  color: #fff;
-  padding: 0px;
-  border-radius: 5px;
-  transform: translateX(-80%);
-  opacity: 0;
-  transition: visibility 0s, opacity 0.3s linear;
-  z-index: 200;
-}
-
-.clear-tooltip{
-  width: 75px;
-  right: -80px;
-}
-
-
-.savedLocation-w ul{
-  display: flex;
-  flex-direction: column;
-}
-
-.savedLocation-w li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
-.savedLocation-w li:hover {
-  background-color: #37455e;
-  cursor: pointer;
-}
-
-.savedLocation-w li:focus {
-  outline: 1px solid var(--loginMainTheme);
-  box-shadow: 0 0 15px var(--loginMainTheme);
-  background-color: #37455e;
-  transition: 0.8s ease;
-}
-
-.savedLocation-w .remove-location {
-  position: absolute;
-  right: 7px;
-  border: none;
-  background: none;
-  transition: transform 0.2s linear;
-  cursor: pointer;
-}
-
-.remove-location:hover {
-  transition: transform 0.2s linear;
-  transform: scale(1.5);
-}
-
-.sidebar-overlay {
-  position: fixed;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.61);
-  pointer-events: none;
-}
-
-.sidebar-overlay.active {
-  opacity: 1;
-  pointer-events: all;
-  transition: 2s ease-out;
-  z-index: 10;
-}
-Sidebar End */
 
 
 /* Main Content Start */
@@ -589,7 +463,7 @@ Sidebar End */
     border-radius: 10px;
     padding: 10px;
     transition: 1s ease;
-    overflow: auto;
+    /* overflow: auto; */
   }
 
   .m-contentTopTitleW {
